# cyber-research-bootcamp

./: Makefile  README.md  pyproject.toml
docs/: decisions.md
src/crb/: cli.py  log_parser.py
src/cyber_research_bootcamp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_log_parser.py
